--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.0",
-    "mongoose-unique-validator": "^4.0.0",
-    "nodemon": "^2.0.22"
+    "mongoose-unique-validator": "^4.0.0"
   },
   "devDependencies": {
-    "eslint": "^8.42.0"
+    "eslint": "^8.42.0",
+    "jest": "^29.5.0",
+    "nodemon": "^2.0.22",
+    "supertest": "^6.3.3"
   }
 }
